description text + site more responsive

--- a/CV.html
+++ b/CV.html
@@ -13,6 +13,7 @@
 <body>
   <header>
     <div class="topnav">
+      <a href="misc.html">Personality</a>
       <a href="CV.html">CV</a>
       <a href="projects.html">Projects</a>
       <a class="active" href="index.html">About Me</a>
