--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
     <body>
         <header>
             <div class="topnav">
+                <a href="misc.html">Personality</a>
                 <a href="CV.html">CV</a>
                 <a href="projects.html">Projects</a>
                 <a class="active" href="index.html">About Me</a>
             </div>
         </header>
-        <main style="flex: 1;">
-        <div class = "container" style="margin-bottom: 100px;">
-            <div class = "text">
-                <h1 style="font-variation-settings: 'wght' 900;font-size: 40px;margin-top: 151px;">Nandini Bhattacharya</h1>
-                <p style = "width: 609px;padding-right: 40px;font-variation-settings: 'wght' 300;"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc feugiat sit amet nulla at ultrices. Nulla fringilla metus non orci interdum eleifend. Nullam sodales nisl vel scelerisque tincidunt. Donec at ipsum non diam lacinia commodo quis ac eros. Integer fringilla ex mauris, sed interdum quam sodales vel. Fusce eleifend cursus pellentesque. Nam iaculis lacus eget velit maximus laoreet. Maecenas vitae laoreet neque. Integer porta nec est fermentum consequat. Sed eleifend libero a aliquet mollis. Curabitur varius eu nisl id aliquet. Aliquam metus tellus, fringilla id tellus eu, lacinia euismod purus. Donec a nisi in ante rhoncus porta in a ante. Nam finibus eu nulla non tincidunt. </p>
+        <main>
+        <div class = "container" style="margin-bottom: 10%; width: 100%">
+            <div class = "text" style="width:80%">
+                <h1 style="font-variation-settings: 'wght' 900;font-size: 40px;margin-top: 10%;padding-left: 0px;">Nandini Bhattacharya</h1>
+                <p style = "width:90%; font-variation-settings: 'wght' 300;padding-left: 0px;"> Hi! I'm Nandini, a third-year undergrad at Ashoka University studying Psychology with a minor in Computer Science. I am an aspiring researcher of trauma and axiety disorders and I'm especially interested in the intergenerational transmission of trauma.</p> 
+                <p style = "width:90%; font-variation-settings: 'wght' 300;padding-left: 0px;"> In fact, I'm currently working on a (prospective) thesis in investigating emotional regualtion patterns in children who grew up witnessing familial violence. In the future I would like to further explore the link between emotions, memory, and stress- perhaps even invetsigate emotion-based interventions for acute stress. I will be applying to postgrad opportunities soon and have my eyes on a PhD in the future (fingers crossed!).</p>
+                <p style="width: 90%; font-variation-settings: 'wght' 300; padding-left: 0px;"> Outside of academics, I am a big fan of the performing arts- theatre, music, dance- and an avid consumer (+ occasional producer) of musical theatre. I love reading and I occassionally write satire. I also cook lots! Find some pictures of all this and more on the 'Personality' section of this website :)</p>
             </div>
             <div class="image">
-                <img src="Ellipse 1.png" alt="Nandini's photo" style="height:250px;width:250px;margin-top: 171px;">
+                <img src="Ellipse 1.png" alt="Nandini's photo" style="height: 60%; width: 60%; margin-top: 30%;">
             </div>
         </div>
         <div class="social-icons">
@@ -35,7 +38,7 @@
           </div>
         </main>
         <footer>
-            <p style="font-size: 15px;color: #F1B1A7;"> Website designed and developed by Nandini Bhattacharya &copy; 2024. Last updated: 28 December 2023</p>
+            <p style="font-size: 10px;color: #F1B1A7;"> Website designed and developed by Nandini Bhattacharya &copy; 2024. Last updated: 28 December 2023</p>
         </footer>
     </body>
 </html>
