--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="social-icons">
-            <a href="mailto:nandinib267@gmail.com" target="_blank"><img src="/Users/nandini/Desktop/website/gmailLogo.png" alt="GMail"></a>
+            <a href="mailto:nandinib267@gmail.com" target="_blank"><img src="gmailLogo.png" alt="GMail"></a>
             <a href="https://www.linkedin.com/in/nandini-bhattacharya26" target="_blank"><img src="linkedinLogo.png" alt="LinkedIn"></a>
             <a href="https://github.com/nandinib267" target="_blank"><img src="githubLogo.png" alt="GitHub"></a>
           </div>
