--- a/CV.html
+++ b/CV.html
@@ -23,7 +23,7 @@
     <h1>MY CV</h1>
     <p>Last Updated: 26 March 2024</p>
     <p>Feel free to email me for an updated copy of this in case its been too long since my last update here!</p>
-    <embed src="NandiniB_Resume.pdf" type="application/pdf" />
+    <embed src="NandiniB_acadResume.pdf" type="application/pdf" />
     </main>
   <footer>
     <p style="font-size: 15px;color: #F1B1A7;"> Website designed and developed by Nandini Bhattacharya &copy; 2024. Last updated: 28 December 2023</p>
