--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class = "container" style="margin-bottom: 10%; width: 100%">
             <div class = "text" style="width:80%">
                 <h1 style="font-variation-settings: 'wght' 900;font-size: 40px;margin-top: 10%;padding-left: 0px;">Nandini Bhattacharya</h1>
-                <p style = "width:90%; font-variation-settings: 'wght' 300;padding-left: 0px;"> Hi! I'm Nandini, a third-year undergrad at Ashoka University studying Psychology with a minor in Computer Science. I am an aspiring researcher of trauma and axiety disorders and I'm especially interested in the intergenerational transmission of trauma.</p> 
-                <p style = "width:90%; font-variation-settings: 'wght' 300;padding-left: 0px;"> In fact, I'm currently working on a (prospective) thesis in investigating emotional regualtion patterns in children who grew up witnessing familial violence. In the future I would like to further explore the link between emotions, memory, and stress- perhaps even investigate emotion-based interventions for acute stress. I will be applying to postgrad opportunities soon and have my eyes on a PhD in the future (fingers crossed!).</p>
-                <p style="width: 90%; font-variation-settings: 'wght' 300; padding-left: 0px;"> Outside of academics, I am a big fan of the performing arts- theatre, music, dance- and an avid consumer (+ occasional producer) of musical theatre. I love reading and I occassionally write satire. I also cook lots! Find some pictures of all this and more on the 'Personality' section of this website :)</p>
+                <p style = "width:90%; font-variation-settings: 'wght' 300;padding-left: 0px;"> Hi! I'm Nandini, a third-year undergrad at Ashoka University studying Psychology with a minor in Computer Science. I am an aspiring researcher of internalising disorders and I'm especially interested in the link between emotion regulation and memory processes.</p> 
+                <p style = "width:90%; font-variation-settings: 'wght' 300;padding-left: 0px;"> In fact, I'm currently working on a thesis investigating emotional regualtion patterns in people who grew up exposed to violence using ECG and Eye Tracking technology. In the future I would like to further explore the link between emotions, memory, and stress- perhaps even investigate emotion-based interventions for disorders caused by acute stress. I will be applying to postgrad opportunities soon and have my eyes on a PhD in the future (fingers crossed!).</p>
+                <p style="width: 90%; font-variation-settings: 'wght' 300; padding-left: 0px;"> Outside of academics, I have recently started a small home garden with help from my mother. I am a big fan of the performing arts- theatre, music, dance- and an avid consumer (+ occasional producer) of musical theatre. I love reading and I occassionally write satire. I also cook lots! Find some pictures of all this and more on the 'Personality' section of this website :)</p>
             </div>
             <div class="image">
                 <img src="Ellipse 1.png" alt="Nandini's photo" style="height: 60%; width: 60%; margin-top: 30%;">
@@ -38,7 +38,7 @@
           </div>
         </main>
         <footer>
-            <p style="font-size: 10px;color: #F1B1A7;"> Website designed and developed by Nandini Bhattacharya &copy; 2024. Last updated: 28 December 2023</p>
+            <p style="font-size: 10px;color: #F1B1A7;"> Website designed and developed by Nandini Bhattacharya &copy; 2024. Last updated: 7 August 2024</p>
         </footer>
     </body>
 </html>
